--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -5,8 +5,8 @@
     <input type="checkbox" id="nav-toggle" hidden>
     <label for="nav-toggle" class="nav-toggle-on" onclick></label>
     <div class="phonen">
-        8 800 12 34 56
-        <div class="mail">info@hmelhaus.ru</div>
+        (4742)23-28-23
+        <div class="mail">HMELHAUSGOST@MAIL.RU</div>
     </div>
     <nav class="nav">
         <label for="nav-toggle" class="nav-toggle-off" onclick></label>
