--- a/app/views/pages/bavariya.html.erb
+++ b/app/views/pages/bavariya.html.erb
@@ -4,9 +4,8 @@
 <div class="content">
 <div class="bavaria"></div>
 <div class="text">
-<p>Не следует, однако забывать, что рамки и место обучения кадров позволяет выполнять важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач.</p>
-
-<p>Товарищи! начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач. Товарищи! новая модель организационной деятельности требуют определения и уточнения направлений прогрессивного развития. Не следует, однако забывать, что рамки и место обучения кадров требуют определения и уточнения систем массового участия.</p>
+<p>Знатоков и любителей пива ждут на втором этаже в зале – «Бавария». Вы сможете насладиться вкусом свежесваренных сортов пива: Дункель, Хелль, Kristal Хелль, Вайцен, IPA. </p>
+<p>Пиво с нашей пивоварни оценено не только постоянными гостями, но и престижными международными выставками с присвоением золотых медалей. Вас так же порадует интересное меню, в котором сочетаются блюда европейкой и русской кухни.</p>
 </div>
 <div class="menu">
 <a href="">ОСН. МЕНЮ</a>
@@ -15,10 +14,10 @@
 <a href="">ДЕТСКОЕ МЕНЮ</a>
 </div>
 <div class="photos">
-	<div class=""><img></div>
-	<div class=""><img></div>
-	<div class=""><img></div>
-	<div class=""><img></div>
+          <div class="photo-iteam"><%= image_tag("b01.jpg", class: "tobig", alt: "") %></div>
+          <div class="photo-iteam"><%= image_tag("b02.jpg", class: "tobig", alt: "") %></div>
+          <div class="photo-iteam"><%= image_tag("b03.jpg", class: "tobig", alt: "") %></div>
+          <div class="photo-iteam"><%= image_tag("b04.jpg", class: "tobig", alt: "") %></div>
 </div>
 <a href="/reservations/new" class="button">Забронировать столик</a>
 </div>
