--- a/app/views/pages/dorado.html.erb
+++ b/app/views/pages/dorado.html.erb
@@ -4,9 +4,7 @@
 <div class="content">
 <div class="dorado"></div>
 <div class="text">
-<p>Не следует, однако забывать, что рамки и место обучения кадров позволяет выполнять важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач.</p>
-
-<p>Товарищи! начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач. Товарищи! новая модель организационной деятельности требуют определения и уточнения направлений прогрессивного развития. Не следует, однако забывать, что рамки и место обучения кадров требуют определения и уточнения систем массового участия.</p>
+<p>Приватность и элегантный уют в гармоничном сочетании с открытой кухней порадуют гостей первого этажа в зале средиземноморской кухни – «Дорадо». Свежие продукты, идеи, комбинации вкусов и изысканные их сочетания не оставят равнодушными ценителей блюд из морепродуктов.</p>
 </div>
 <div class="menu">
 <a href="">ОСН. МЕНЮ</a>
@@ -14,10 +12,10 @@
 <a href="">ДЕТСКОЕ МЕНЮ</a>
 </div>
 <div class="photos">
-  <div class=""><img></div>
-  <div class=""><img></div>
-  <div class=""><img></div>
-  <div class=""><img></div>
+    <div class="photo-iteam"><%= image_tag("d01.jpg", class: "tobig", alt: "") %></div>
+    <div class="photo-iteam"><%= image_tag("d02.jpg", class: "tobig", alt: "") %></div>
+    <div class="photo-iteam"><%= image_tag("d03.jpg", class: "tobig", alt: "") %></div>
+    <div class="photo-iteam"><%= image_tag("d04.jpg", class: "tobig", alt: "") %></div>
 </div>
 <a href="/reservations/new" class="button">Забронировать столик</a>
 </div>
