--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,17 +1,23 @@
-<h1>Editing Product</h1>
-<% if has_image? @product.photos[0] %>
-  <ul class="product-images">
-    <% @product.photos.each do |meta_mongoid| %>
-      <li class="item">
-        <%= image_tag_paper_mongoid meta_mongoid, class: 'img-responsive', width: '320', id: 'iiii' %>
-      </li>
-    <% end %>
-  </ul>
-<% else %>
-  <%= image_tag 'backgrounds/no-image320x240.png', class: 'img-responsive' %>
-<%end%>
+<section class="news">
+ <%= render partial: 'application/navbar', locals: {back: false}%>
+ <%= render partial: 'application/header', locals: {h1:"Редактирование меню", h1up:"menu"}%>
+ <div class="content">
+	<% if has_image? @product.photos[0] %>
+	  <ul class="product-images">
+	    <% @product.photos.each do |meta_mongoid| %>
+	      <li class="item">
+	        <%= image_tag_paper_mongoid meta_mongoid, class: 'img-responsive', width: '320', id: 'iiii' %>
+	      </li>
+	    <% end %>
+	  </ul>
+	<% else %>
+	  <%= image_tag 'backgrounds/no-image320x240.png', class: 'img-responsive' %>
+	<%end%>
 
-<%= render 'form', product: @product, gallery: @gallery %>
+	<%= render 'form', product: @product, gallery: @gallery %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+	<%= link_to 'Show', @product %> |
+	<%= link_to 'Back', products_path %>
+</div>
+ <%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
+</section>
