--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= reservation.phone %></td>
         <td><%= reservation.email %></td>
         <td><%= reservation.description %></td>
-        <td><%= reservation.user %></td>
+        <td><%= reservation.user_id %></td>
         <td><%= link_to 'Show', reservation %></td>
         <td><%= link_to 'Edit', edit_reservation_path(reservation) %></td>
         <td><%= link_to 'Destroy', reservation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
