--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,6 +21,9 @@
           <div class="title"><h3><%= event.title %></h3></div>
           <div class="time"><%= event.id.generation_time.day %>.<%= event.id.generation_time.month %>.<%= event.id.generation_time.year %>, <%= event.tag %>
           </div>
+          <% if current_user.admin? %>
+            <%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+          <% end %>
         <% end %>
         </a>
       </div>
