--- a/app/views/pages/contacts.html.erb
+++ b/app/views/pages/contacts.html.erb
@@ -5,14 +5,15 @@
 	<div class="text">
 		
 		<p class="center">
-			<span class="big">8 800 12 34 56</span>(Телефон для заказа столиков, банкетов, аренды и концертов.)
-			<span class="sbig">info@mail.ru</span>
-			<span class="sbig">г. Липецк, ул. Горького 7</span>
+			<span class="big">+7 (4742) 23-28-23</span>(Телефон для заказа столиков, банкетов, аренды и концертов.)
+			<span class="big">+7 (980) 263-55-43</span>Wat’s app/Viber
+			<span class="sbig">hmelhausgost@mail.ru</span>
+			<span class="sbig">г. Липецк, ул. М. Горького, д. 7а</span>
 		</p>
 		<a href="/reservations/new" class="button">Забронировать столик</a>
 		<h2>Карта проезда</h2>
 		<div class="map">
-		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A09ca8ffe2589e9352d42f8dd5302521b2d5359269eca545a7f962e1469fc70f9&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+			<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A09ca8ffe2589e9352d42f8dd5302521b2d5359269eca545a7f962e1469fc70f9&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 		</div>
 	</div>
 </div>
