--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -3,7 +3,7 @@
 <%= render partial: 'application/header', locals: {h1:"Забронировать столик", h1up:"Contacts"}%>
 <div class="content">
 	<div class="text">
-		<p class="center">Товарищи! начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач.</p>
+		<p class="center">Заполните форму ниже, мы Вам перезвоним</p>
 		<%= render 'form', reservation: @reservation %>
 	</div>
 </div>
