--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @reservation.user %>
+  <%= @reservation.user_id %>
 </p>
 
 <%= link_to 'Edit', edit_reservation_path(@reservation) %> |
