--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1491,6 +1491,12 @@ img.tobig:hover{
 	border: 2px solid #f1c854;
 	padding:20px;
 }
+.notice{
+	padding:20px;
+	text-align: center;
+	font-weight: bold;
+	color:#fbcb45;
+}
 @-webkit-keyframes bugfix {
     to {
       padding: 0;
