--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -6,7 +6,7 @@
     <label for="nav-toggle" class="nav-toggle-on" onclick></label>
     <div class="phonen">
         (4742)23-28-23
-        <div class="mail">HMELHAUSGOST@MAIL.RU</div>
+        <div class="mail">reservation@hmelhaus.ru</div>
     </div>
     <nav class="nav">
         <label for="nav-toggle" class="nav-toggle-off" onclick></label>
@@ -18,9 +18,9 @@
               <div class="phone"><%= current_user.phone %></div>
             </li>
             <% end %>
-            <li class="menu"><%= link_to 'Меню доставки', products_path %></li>
+            <!--<li class="menu"><%= link_to 'Меню доставки', products_path %></li>-->
             <li class="bron"><a href="/reservations/new">Забронировать столик</a></li>
-            <li class="news"><%= link_to 'Новости', events_path %></li>
+            <li class="news"><%= link_to 'События', events_path %></li>
             <li class="otziv"><a href="/reviews/new">Оставить отзыв</a></li>
             <li class="cont"><a href="/pages/contacts">Контакты</a></li>
             <% if user_signed_in? %>
