--- a/app/views/pages/bavariya.html.erb
+++ b/app/views/pages/bavariya.html.erb
@@ -8,10 +8,9 @@
 <p>Пиво с нашей пивоварни оценено не только постоянными гостями, но и престижными международными выставками с присвоением золотых медалей. Вас так же порадует интересное меню, в котором сочетаются блюда европейкой и русской кухни.</p>
 </div>
 <div class="menu">
-<a href="">ОСН. МЕНЮ</a>
-<a href="">ПИВНАЯ КАРТА</a>
-<a href="">ВИННАЯ КАРТА</a>
-<a href="">ДЕТСКОЕ МЕНЮ</a>
+<a href="/assets/B_main.pdf">ОСН. МЕНЮ</a>
+<a href="/assets/B_pivo.pdf">ПИВНАЯ КАРТА</a>
+<a href="/assets/B_det.pdf">ДЕТСКОЕ МЕНЮ</a>
 </div>
 <div class="photos">
           <div class="photo-iteam"><%= image_tag("b01.jpg", class: "tobig", alt: "") %></div>
