--- a/app/views/pages/contacts.html.erb
+++ b/app/views/pages/contacts.html.erb
@@ -7,7 +7,7 @@
 		<p class="center">
 			<span class="big">+7 (4742) 23-28-23</span>(Телефон для заказа столиков, банкетов, аренды и концертов.)
 			<span class="big">+7 (980) 263-55-43</span>Wat’s app/Viber
-			<span class="sbig">hmelhausgost@mail.ru</span>
+			<span class="sbig">reservation@hmelhaus.ru</span>
 			<span class="sbig">г. Липецк, ул. М. Горького, д. 7а</span>
 		</p>
 		<a href="/reservations/new" class="button">Забронировать столик</a>
