--- a/app/views/pages/dorado.html.erb
+++ b/app/views/pages/dorado.html.erb
@@ -7,9 +7,9 @@
 <p>Приватность и элегантный уют в гармоничном сочетании с открытой кухней порадуют гостей первого этажа в зале средиземноморской кухни – «Дорадо». Свежие продукты, идеи, комбинации вкусов и изысканные их сочетания не оставят равнодушными ценителей блюд из морепродуктов.</p>
 </div>
 <div class="menu">
-<a href="">ОСН. МЕНЮ</a>
-<a href="">БАРНАЯ КАРТА</a>
-<a href="">ДЕТСКОЕ МЕНЮ</a>
+<a href="/assets/D_main.pdf">ОСН. МЕНЮ</a>
+<a href="/assets/D_bar.pdf">БАРНАЯ КАРТА</a>
+<a href="/assets/B_det.pdf">ДЕТСКОЕ МЕНЮ</a>
 </div>
 <div class="photos">
     <div class="photo-iteam"><%= image_tag("d01.jpg", class: "tobig", alt: "") %></div>
