--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -3,7 +3,7 @@
 <%= render partial: 'application/header', locals: {h1:"Оставить отзыв", h1up:"Contacts"}%>
 <div class="content">
 	<div class="text">
-		<p class="center">Товарищи! начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач.</p>
+		<p class="center">Здесь Вы можете оставить свой отзыв/комментарий/пожелание</p>
 		<%= render 'form', review: @review %>
 	</div>
 </div>
