--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -41,7 +41,7 @@
         </div>
     	<div class="text">
             <h2>Ресторан включается в себя три зала.</h2>
-<p><h3>1 этаж – «Дорадо».</h3> Изысканный интерьер, винная комната и меропродукты и романтические вечера!</p>
+<p><h3>1 этаж – «Дорадо».</h3> Изысканный интерьер, винная комната и морепродукты и романтические вечера!</p>
 <p><h3>2 этаж – «Бавария».</h3> Роскошный большой зал, собственная пивоварня, европейское меню и шоу-программа.</p>
 <p><h3>Веранда</h3>При входе – атмосферная веранда, где действуют оба меню, а так же детская игровая площадка.</p>
     		</p>
